# openclaw-voice-assistant

./: .env.example  .gitignore  AUDIT_CLAUDECODE.md  AUDIT_PROMPT.md  BUGS_PENDENTES.md  CLAUDE.md  CLOUDFLARE_ANALYSIS.md  CLOUDFLARE_REPORT.md  CONTRIBUTING.md  FIX_PLUGIN.md  IMPLEMENT_TUNNEL.md  LICENSE  README.md  ROADMAP.md  TESTING_LOG.md  TESTING_RESULTS.md  UPGRADE_PLAN.md  _test_detect.py  _test_import.py  _test_latency.py  _test_mic.py  index.ts  openclaw.plugin.json  package.json  pyproject.toml  requirements-local.txt  requirements.txt  run.ps1  run.sh  server_ws.py  setup.ps1  setup.sh  voice_assistant.py  voice_assistant_app.py  voice_assistant_cli.py  voice_assistant_vps.py  voice_assistant_web.py
arquivo/: test_bugs_documented.py  test_code_duplication.py  test_vps.py  test_vps_extended.py  test_web.py  test_web_extended.py
auditoria/: fase1.md  fase2.md  fase3.md  fase4.md  fase5.md  fase6.md  fase7.md  fase8.md  fase9.md  s4_transporte.md  s5_robustez.md  s6_deploy.md  s7_seguranca.md  s8_conversacao.md
core/: __init__.py  __main__.py  config.py  history.py  llm.py  stt.py  tts.py
docs/: SECURITY.md
prompts/: README.md  fase1_otimizacao.md  fase2.md  fase3_polish.md  fase4.md  fase5.md  fase6.md  fase9_autodetect_port.md  s9_simplificar_execucao.md
scripts/: _activate_venv.sh  connect.sh  run_local.ps1  run_local.sh  run_local_remote_gateway.ps1  run_local_remote_gateway.sh  run_vps.ps1  run_vps.sh  teste_tts.py
static/: index.html
tests/: conftest.py  test_bugs_documented.py  test_cli.py  test_cli_extended.py  test_code_duplication.py  test_entry_point.py  (+8 more)
(+35 files in other folders)
