[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-voice-assistant"
version = "0.1.0"
description = "Speech-to-Speech voice interface for OpenClaw Gateway"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dayner"}
]
keywords = ["openclaw", "voice-assistant", "speech-to-speech", "whisper", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper",
    "edge-tts",
    "requests",
    "numpy",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
local = [
    "scipy",
    "sounddevice",
]
gradio = [
    "gradio",
]

[project.urls]
Homepage = "https://github.com/quenaisaacdayner-art/openclaw-voice-assistant"
Repository = "https://github.com/quenaisaacdayner-art/openclaw-voice-assistant"
Issues = "https://github.com/quenaisaacdayner-art/openclaw-voice-assistant/issues"

[project.scripts]
ova = "core.__main__:main"

[tool.setuptools.packages.find]
include = ["core*", "static*"]

[tool.setuptools.package-data]
static = ["*.html", "*.js"]
